put pics in an Images folder, having trouble getting them to display

--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -1,22 +1,31 @@
-.carousel-container {
-	height: 240px;
-	width: 300px;
+.title {
+	width: 340px;
 	background-color: rgb(246, 230, 222);
 }
 
-.flex-container {
+.carousel-container {
 	display: flex;
 	flex-direction: row;
+	height: 260px;
+	width: 320px;
+	background-color: rgb(246, 230, 222);
+	border-left: 20px solid rgb(246, 230, 222);
+}
+
+button {
+	background-color: rgb(246, 230, 222);
+	border: 0;
+	margin-bottom: 60px;
 }
 
 img {
 	height: 210px;
-	width: 270px;
+	width: 125px;
 	margin: 10px;
 	margin-bottom: 0;
 }
 
 p {
 	text-align: center;
-	margin-top: 0;
+	margin: 0;
 }
