--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -39,6 +39,51 @@ Larger in size */
 .button-light-pink {
     border: 2px;
     padding: 5px 25px;
-    background-color: rgb(249, 229, 221);
-    color: rgb(67, 31, 16);
+    background-color: #FAE5DC;
+    color: #441F0E;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 22px;
+    font-style: normal;
+    font-family: Sahitya;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 31px;
+    width: 117px;
+   
+}
+
+.button-dark-pink {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 18px;
+    background-color: rgba(68, 31, 14, 0.2);
+    border: 2px;
+    padding: 5px 25px;
+}
+
+.button-small-grey {
+    font-family: Sahitya;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 28px;
+    color: #000000;
+    background: rgba(68, 31, 14, 0.2);
+}
+
+.button-large-red {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    background-color: #441F0E;
+    border: 0.3px solid #441F0E;
+    box-sizing: border-box;
+    color: white;
+    position: absolute;
+    width: 138px;
+    height: 30px;
 }
