--- a/client/src/components/Nav Menu/NavMenu.css
+++ b/client/src/components/Nav Menu/NavMenu.css
@@ -1,13 +1,73 @@
-ul {
-    list-style: none;
-}
-
 .nav-container {
     background-color: #FAE5DC;
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: flex-start;
+    align-content: space-around;
     align-items: center;
-    align-content: center;
+    height: 100vh;
+    width: 100vw;
+    margin: 0 auto;
+}
+
+.nav-container nav {
+    text-align: center;
+    padding-top: 4rem;
+
+}
+
+.nav-container nav ul {
+    list-style: none;
+     margin: 0;
+     padding: 0;
+}
+
+.nav-container nav ul li h3 {
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 29px;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+@media only screen and (min-width: 600px) {
+
+    .nav-container {
+        flex-flow: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: auto;
+        height: auto;
+        width: 100%;
+    }
+
+    .nav-container nav {
+        padding: 10px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .nav-container nav ul {
+         display: flex;
+         flex-flow: row;
+         list-style: none;
+         margin: 0;
+         padding: 0;
+    }
+
+    .nav-container nav ul li h3 {
+        font-size: 18px;
+        margin: 0 auto;
+    }
+
+    .nav-container nav ul li {
+        padding: 0 20px;
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+        align-items: center;
+    }
 
 }
