--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -37,8 +37,7 @@ Black text
 Larger in size */
 
 .button-light-pink {
-    border: 2px;
-    padding: 5px 25px;
+    border: 1px;
     background-color: #FAE5DC;
     color: #441F0E;
     font-size: 15px;
@@ -48,7 +47,7 @@ Larger in size */
     font-family: Sahitya;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     height: 31px;
-    width: 117px;
+    width: 88px;
    
 }
 
@@ -59,8 +58,9 @@ Larger in size */
     font-size: 15px;
     line-height: 18px;
     background-color: rgba(68, 31, 14, 0.2);
-    border: 2px;
-    padding: 5px 25px;
+    border: 1px;
+    height: 28px;
+    width: 75px;
 }
 
 .button-small-grey {
@@ -71,19 +71,21 @@ Larger in size */
     line-height: 28px;
     color: #000000;
     background: rgba(68, 31, 14, 0.2);
+    height: 28px;
+    width: 75px;
+    border: 1px;
 }
 
 .button-large-red {
     font-family: Raleway;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 800;
     font-size: 14px;
     line-height: 16px;
     background-color: #441F0E;
     border: 0.3px solid #441F0E;
     box-sizing: border-box;
     color: white;
-    position: absolute;
     width: 138px;
     height: 30px;
 }
