--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -89,3 +89,30 @@ Larger in size */
     width: 138px;
     height: 30px;
 }
+
+.button-large-grey {
+  width: 154px;
+  height: 35px;
+  background-color: rgba(227, 224, 222);
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+  border: 1px;
+}
+
+.button-large-white {
+    height: 37px;
+    width: 202px;
+    background-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 20px;
+    line-height: 23px;
+    font-family: Raleway;
+    font-weight: normal;
+    font-style: normal;
+    color: #000000;
+}
