trying some react packages for carousels

--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -16,6 +16,8 @@ button {
 	background-color: rgb(246, 230, 222);
 	border: 0;
 	margin-bottom: 60px;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 img {
