--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,41 +1,3 @@
-/* Should be a standard button which has the following variations:
-
-Small Light Pink Button Theme:
-Squared corners
-Light pink background
-Red Text
-Small in size
-
-Small Dark Pink Button Theme:
-Squared corners
-Dark pink background
-Black Text
-Small in size
-
-Small Grey Button Theme:
-Squared Corners
-Grey background
-Black Text
-Small in size
-
-Large Red Button Theme:
-Squared Corners
-Red background
-White text
-Larger in size
-
-Large Grey Button Theme:
-Squared Corners
-Grey background
-Black text
-Larger in size
-
-Large White Button Theme:
-Squared Corners
-White background
-Black text
-Larger in size */
-
 .button-light-pink {
     border: 1px;
     background-color: #FAE5DC;
@@ -88,18 +50,19 @@ Larger in size */
     color: white;
     width: 138px;
     height: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .button-large-grey {
   width: 154px;
   height: 35px;
   background-color: rgba(227, 224, 222);
-  font-family: Raleway;
+  font-family: Sahitya;
   font-style: normal;
   font-weight: bold;
   font-size: 13px;
   line-height: 16px;
-  color: #000000;
+  color: black;
   border: 1px;
 }
 
