set up my slides with an array of objects to be populated together accordingly.  slide button is in place as well, just need to give the button functionality to cycle through the slides only dsplaying one at a time

--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,3 +1,21 @@
+/* pure-react-carousel package */
+
+.slide {
+	height: 280px;
+	width: 200px;
+	/* background-color: red; */
+}
+
+.slide1 .slide2 .slide3 .slide4 {
+	height: 200px;
+	width: 200px;
+	/* background-color: red; */
+}
+
+
+
+/* Static */
+
 .title {
 	width: 340px;
 	background-color: rgb(246, 230, 222);
