--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,197 @@
-.App {
-  text-align: center;
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+ol, ul {
+	list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+  border-spacing: 0;
+  
+}
+
+/*Primary Colors */
+
+.primary-pink {
+  background-color: #FAE5DC;
+}
+
+.secondary-pink {
+  background-color: #f9dacd;
+  opacity: 0.4;
+}
+
+/* black for heading or background */
+.black {
+  background-color: #000000;
+}
+
+
+/*Other Colors */
+.page-background-grey {
+  background-color: #E5E5E5;
+}
+
+.brown-background {
+  background-color: #441F0E;
+}
+
+/* Desktop Appointment Flow */
+
+.desktop-appointment-beige {
+  background-color: #441f0e;
+  opacity: 0.2;
+}
+
+.desktop-appointment-grey {
+  background-color: #E2DFDF;
+}
+
+/* Mobile Appointment Flow */
+
+.mobile-appointment-grey {
+  background-color: #441F0E;
+  opacity: 0.1;
+}
+
+/* Typography */
+
+h1 {
+  font-family: 'Playfair Display', sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 45px;
+  line-height: normal;
+  letter-spacing: 0;
+  color: #000000;
+}
+
+h2 {
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 40px;
+  line-height: normal;
+  letter-spacing: 0;
+  color: #000000;
+}
+
+h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: medium;
+  font-style: normal;
+  font-size: 24px;
+  line-height: normal;
+  letter-spacing: 0;
+  color: #000000;
+}
+
+h4 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bolder;
+  font-style: normal;
+  font-size: 30px;
+  line-height: normal;
+  letter-spacing: 0;
+  color: #000000;
+}
+
+h5 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 24px;
+  line-height: normal;
+  letter-spacing: 0;
+  color: #000000;
+}
+
+.body1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0;
+  color: #000000;
+  line-height: normal;
+}
+
+.body2 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 11px;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0;
+  color: #000000;
+  line-height: normal;
+}
+
+.body3 {
+  font-family: 'Playfair Display', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 0.1px;
+  color: #000000;
+}
+
+@media only screen and (min-width: 992px) {
+
+.body1 {
+  font-size: 20px;
+  line-height: 18px;
+  letter-spacing: 0.1px;
+}
+
+.body2 {
+  font-size: 30px;
+  letter-spacing: 0.1px;
+  line-height: 24px;
+}
+
 }
