--- a/client/src/components/NavMenu/NavMenu.css
+++ b/client/src/components/NavMenu/NavMenu.css
@@ -1,89 +1,88 @@
 .nav-container {
-        background-color: #FAE5DC;
-        display: flex;
-        flex-flow: column;
-        justify-content: flex-start;
-        align-content: space-around;
-        align-items: center;
-        height: 100vh;
-        width: 100vw;
-        margin: 0 auto;
+  background-color: #fae5dc;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start;
+  align-content: space-around;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  margin: 0 auto;
 }
 
 .nav-container nav {
-        text-align: center;
-        padding-top: 4rem;
+  text-align: center;
+  padding-top: 4rem;
 }
 
 .nav-container nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-container .nav-title {
-        font-family: 'Raleway', sans-serif;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 25px;
-        line-height: 29px;
-        color: #000000;
-        text-transform: uppercase;
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 25px;
+  line-height: 29px;
+  color: #000000;
+  text-transform: uppercase;
 }
 
 span.dots {
-        display: none;
-        padding: 0 2em;
-        font-size: 8px;
+  display: none;
+  padding: 0 2em;
+  font-size: 8px;
 }
 
 @media only screen and (min-width: 735px) {
+  .nav-container {
+    flex-flow: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: auto;
+    height: auto;
+    width: 100%;
+  }
 
-    .nav-container {
-        flex-flow: row;
-        justify-content: space-evenly;
-        align-items: center;
-        margin: auto;
-        height: auto;
-        width: 100%;
-    }
+  .nav-container nav {
+    padding: 5px;
+    display: flex;
+    justify-content: space-evenly;
+  }
 
-    .nav-container nav {
-        padding: 5px;
-        display: flex;
-        justify-content: space-evenly;
-    }
+  .nav-container nav ul {
+    display: flex;
+    flex-flow: row;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 
-    .nav-container nav ul {
-         display: flex;
-         flex-flow: row;
-         list-style: none;
-         margin: 0;
-         padding: 0;
-    }
+  .nav-container .nav-title {
+    font-size: 16px;
+    margin: 0 auto;
+  }
 
-    .nav-container .nav-title {
-        font-size: 16px;
-        margin: 0 auto;
-    }
+  .nav-container .nav-title:hover {
+    text-decoration: underline;
+    cursor: pointer;
+  }
 
-    .nav-container .nav-title:hover {
-        text-decoration: underline;
-        cursor: pointer;
-    }
+  .nav-container nav ul li {
+    padding: 0;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .nav-container nav ul li {
-        padding: 0;
-        display: flex;
-        flex-flow: row;
-        justify-content: center;
-        align-items: center;
-    }
-
-    span.dots {
-        padding: 0 2em;
-        font-size: 8px;
-        visibility: visible;
-        display: inline-block;
-    }
+  span.dots {
+    padding: 0 2em;
+    font-size: 8px;
+    visibility: visible;
+    display: inline-block;
+  }
 }
