--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,33 +1,8 @@
-.card {
-	height: 169px;
-	width: 234px;
-	border-radius: 10px;
-	background-color: rgb(247,230,222);
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	margin: 12px;
-
-}
 .title {
 	font-size: 18px;
-}
-.cardTitle {
 	margin: 0;
-	font-size: 13px;
 }
-.cardIcon {
-	margin-top: 26px;
-}
-.cardParagraph {
-	margin: 0 30px;
-	text-align: center;
-	font-size: 13px;
-	line-height: 15px;
-	font-family: 'Raleway';
-}
-.cardContainer {
+.card-container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
