--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,4 +1,15 @@
-button {
+/* button {
 	background-color: white;
+
+} */
+button {
+background-color: white;
+font-weight: bolder;	
+font-size: 50px;
+border: 3px outset black;
+justify-self: auto;
+border-radius: 5px;
+padding-bottom: 5px;
+justify-items: center;
 
 }
