--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,54 +1,3 @@
-.button {
-  font-style: normal;
-  font-weight: bold;
-  line-height: 20px;
-  font-family: Sahitya;
-  font-size: 15px;
-  border: 1px;
-}
-
-.button-large {
-  width: 155px;
-  height: 33px;
-  font-size: 13px;
-  line-height: 16px;
-  color: black;
-}
-
-.button-light-pink {
-  background-color: #fae5dc;
-  color: #441f0e;
-  font-weight: bold;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 31px;
-  width: 88px;
-}
-
-.button-dark-pink {
-  background-color: rgba(68, 31, 14, 0.2);
-  height: 28px;
-  width: 75px;
-}
-
-.button-red {
-  font-weight: 800;
-  background-color: #441f0e;
-  border: 0.3px solid #441f0e;
-  box-sizing: border-box;
-  color: white;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.button-grey {
-  background-color: rgba(227, 224, 222);
-}
-
-.button-white {
-  height: 37px;
-  width: 202px;
-  background-color: #ffffff;
-  border: 1px solid #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-size: 20px;
-  font-weight: lighter;
+button {
+	background-color: red;
 }
