--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,21 +1,12 @@
 .slide {
 	height: 280px;
-	width: 320px;
+	width: 300px;
 	margin-right: 30px;
-}
-
-.slide1 .slide2 .slide3 .slide4 {
-	height: 200px;
-	width: 200px;
 }
 
 .title {
 	width: 340px;
 	background-color: rgb(246, 230, 222);
-}
-
-.slideshow-container {
-	display: flex;
 }
 
 .card {
@@ -35,12 +26,9 @@
 .button {
 	background-color: rgb(246, 230, 222);
 	border: 0;
-	margin-bottom: 50px;
-	margin-left: 0;
+	margin: 0;
 	font-size: 20px;
-	font-weight: bold;
-	height: 260px;
-	/* float: right; */
+	height: 278px;
 }
 
 img {
