--- a/client/src/components/NavMenu/NavMenu.css
+++ b/client/src/components/NavMenu/NavMenu.css
@@ -37,6 +37,10 @@ span.dots {
   font-size: 8px;
 }
 
+.is-visible {
+  visibility: hidden;
+}
+
 @media only screen and (min-width: 735px) {
   .nav-container {
     flex-flow: row;
