renamed all files and folders to match semantics and created new branch to match that too

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -1,8 +1,8 @@
-.hamburger {
+.hamburger-menu {
 	background-color: white;
 }
 
-.burgers {
+.hamburger-divs {
     width: 35px;
     height: 5px;
     background-color: black;
