--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,21 +1,22 @@
-.slide {
+.slider-slide {
   height: 280px;
   width: 280px;
   margin-right: 30px;
 }
 
-.title {
+.slider-title {
   width: 340px;
   background-color: rgb(246, 230, 222);
   text-align: left;
+  margin: 0;
   font-weight: bold;
 }
 
-.card {
+.slider-card {
   display: flex;
 }
 
-.slide-container {
+.slider-slide-container {
   display: flex;
   flex-direction: row;
   height: 260px;
@@ -25,7 +26,7 @@
   margin-right: 0;
 }
 
-.button {
+.slider-button {
   background-color: rgb(246, 230, 222);
   border: 0;
   margin: 0;
@@ -33,14 +34,14 @@
   height: 278px;
 }
 
-img {
+.slider-pic {
   height: 210px;
   width: 125px;
   margin: 10px;
   margin-bottom: 0;
 }
 
-p {
+.slider-text {
   text-align: center;
   margin: 0;
   font-weight: bold;
