--- a/client/src/components/DisplayComponent/DisplayComponent.css
+++ b/client/src/components/DisplayComponent/DisplayComponent.css
@@ -1,10 +1,19 @@
+.display-component-title {
+    background-color: rgb(246, 230, 222);
+    width: 340px;
+    border-top: 18px solid rgb(246, 230, 222);
+    border-bottom: 18px solid rgb(246, 230, 222);
+    margin-bottom: 0;
+    text-align: center;
+}
+
 .display-component-slide {
     height: 280px;
     width: 280px;
     margin-right: 30px;
   }
   
-  .display-component-title {
+  .display-component-collection-title {
     width: 340px;
     background-color: rgb(246, 230, 222);
     text-align: left;
@@ -16,7 +25,7 @@
     display: flex;
   }
   
-  .display-component-slide-container {
+  .display-component-container {
     display: flex;
     flex-direction: row;
     height: 260px;
