changed my component

--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,3 +1,11 @@
 button {
 	background-color: red;
 }
+
+.button-warning{
+	background-color: yellow;
+}
+
+.button-caution{
+	background-color: teal;
+}
