--- a/client/src/components/TextInputComponent/TextInput.css
+++ b/client/src/components/TextInputComponent/TextInput.css
@@ -3,7 +3,8 @@
   src: url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 }
 
-.textInputClass {
+.text-input {
+  display: block;
   font: Raleway;
   background-color: rgb(228, 224, 222);
   padding: 5px 0px;
@@ -11,7 +12,7 @@
   font-size: 18px;
 }
 
-.labelNameClass {
+.label-name {
   font: Raleway;
   font-size: 18px;
 }
