--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,8 +1,11 @@
-.card-title {
-	margin: 0;
-}
 .card-container {
+	height: 169px;
+	width: 234px;
+	border-radius: 10px;
+	background-color: rgb(247,230,222);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	margin: 12px;
 }
