--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -9,3 +9,13 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	margin: 12px;
 }
+.card-icon {
+
+}
+.card-title {
+	margin: 0;
+}
+.card-paragraph {
+	margin: 0;
+	text-align: center;
+}
