--- a/client/src/components/NavMenu/NavMenu.css
+++ b/client/src/components/NavMenu/NavMenu.css
@@ -22,6 +22,12 @@
   padding: 0;
 }
 
+.nav-container nav ul a {
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
 .nav-container .nav-title {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -45,9 +51,9 @@ span.dots {
 @media only screen and (min-width: 735px) {
   .nav-container {
     flex-flow: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     height: auto;
     width: 100%;
   }
@@ -55,12 +61,17 @@ span.dots {
   .nav-container nav {
     padding: 5px;
     display: flex;
-    justify-content: space-evenly;
+    flex-flow: row;
+    justify-content: center;
+    width: 85%;
   }
 
   .nav-container nav ul {
     display: flex;
     flex-flow: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -84,10 +95,16 @@ span.dots {
     align-items: center;
   }
 
+  .nav-container nav ul a {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+  }
+
   span.dots {
     padding: 0 2em;
     font-size: 8px;
     visibility: visible;
-    display: inline-block;
+    display: flex;
   }
 }
