--- a/client/src/components/TextArea/Text.css
+++ b/client/src/components/TextArea/Text.css
@@ -1,13 +1,11 @@
-
-
 .text-area {
-    width: 400px;
-    height: 150px;
-    background-color: rgb(227,224,222);
-    color: rgb(94,91,90);
-    font-size: 25px;
+  width: 400px;
+  height: 150px;
+  background-color: rgb(227, 224, 222);
+  color: rgb(94, 91, 90);
+  font-size: 25px;
 }
 
 .text-area-title {
-    font-size: 30px;
+  font-size: 30px;
 }
