installed font awesome and imported hamburger icon and rendered it into storybook

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -2,9 +2,6 @@
 	background-color: white;
 }
 
-.hamburger-divs {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
-  }
+.hamburger-menu:hover {
+  cursor: pointer;
+}
