after hours of writing code I finally got it to populate in storybook by passing the component properly, I still need to work on my callback function to switch icons when clicked

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -1,7 +1,18 @@
 .hamburger-menu {
-	background-color: white;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  text-align: center;
 }
 
 .hamburger-menu:hover {
   cursor: pointer;
+}
+
+.hamburger-Bars {
+  font-size: 30px;
+}
+
+.hamburger-Times {
+  font-size: 30px;
 }
