--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,19 +1,16 @@
 .card-container {
-	height: 169px;
-	width: 234px;
+	max-height: 169px;
+	max-width: 234px;
 	border-radius: 10px;
 	background-color: rgb(247,230,222);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	margin: 12px;
-}
-.card-icon {
-
+	padding: 24px;
 }
 .card-title {
-	margin: 0;
+	margin: 10px 0 0 0;
 }
 .card-paragraph {
 	margin: 0;
