got function to work with classes, got it to change icons but now it won't change back fml

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -9,10 +9,10 @@
   cursor: pointer;
 }
 
-.hamburger-Bars {
+.hamburger-icon {
   font-size: 30px;
 }
 
-.hamburger-Times {
+/* .hamburger-Times {
   font-size: 30px;
-}
+} */
