--- a/client/src/components/FlagshipMenu/Flagship.css
+++ b/client/src/components/FlagshipMenu/Flagship.css
@@ -1,14 +1,32 @@
 .flagship-container {
 	background-color: #FAE5DC;
+	max-width: 375px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 header {
 	display: flex;
 	align-items: center;
 }
+img {
+	width: 100%;
+	height: 201px;
+	background-color: lightgray;
+}
+section {
+	/*text-align: center;*/
+}
+h3 {
+	text-align: center;
+}
+.flagship-line {
+	/*width: 70%;*/
+}
 .flagship-info {
 	display: grid;
 	grid-template-columns: 20px 160px;
-	align-items: center;
+	/*align-items: left;*/
 }
 .contact-info-title {
 	margin: 0;
