--- a/client/src/components/TextInputComponent/TextInput.css
+++ b/client/src/components/TextInputComponent/TextInput.css
@@ -1,6 +1,6 @@
 .text-input {
   display: block;
-  font: Raleway;
+  font-family: "Raleway", sans-serif;
   background-color: rgb(228, 224, 222);
   padding: 5px 0px;
   outline-color: rgb(249, 228, 221);
@@ -8,6 +8,6 @@
 }
 
 .label-name {
-  font: Raleway;
+  font-family: "Raleway", sans-serif;
   font-size: 18px;
 }
