added link to back arrow, did more styling

--- a/client/src/components/FlagshipMenu/Flagship.css
+++ b/client/src/components/FlagshipMenu/Flagship.css
@@ -9,6 +9,13 @@
 .flagship-header {
 	display: flex;
 	align-items: center;
+	margin-top: 16px;
+}
+.arrow-icon-link {
+	color: black;
+}
+.flagship-arrow-icon {
+
 }
 .flagship-city {
 
@@ -23,12 +30,11 @@
 }
 .store-contact-info {
 	text-align: center;
-}
-.flagship-line {
-	/*width: 70%;*/
+	margin: 0;
+	margin-top: 24px;
 }
 .flagship-info {
-	margin: 20px 0;
+	margin: 30px 0;
 	display: grid;
 	grid-template-columns: 20px 160px;
 	grid-template-areas:
