--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -13,6 +13,7 @@
   font-size: 13px;
   line-height: 16px;
   color: black;
+  font-family: Raleway;
 }
 
 .button-light-pink {
@@ -28,6 +29,7 @@
   background-color: rgba(68, 31, 14, 0.2);
   height: 28px;
   width: 75px;
+  font-family: Raleway;
 }
 
 .button-red {
@@ -37,6 +39,7 @@
   box-sizing: border-box;
   color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 14px;
 }
 
 .button-grey {
