--- a/client/src/components/DatePicker/DatePicker.css
+++ b/client/src/components/DatePicker/DatePicker.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: Raleway;
   src: url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 }
@@ -22,4 +22,4 @@
   text-align: center;
   margin: 0.4rem 0;
   background: rgba(68, 31, 14, 0.2);
-}
+} */
