--- a/client/src/components/FullLogo/Logo.css
+++ b/client/src/components/FullLogo/Logo.css
@@ -13,7 +13,7 @@
     color: #25282B;
 }
 
-.trouseau {
+.trousseau {
     font-family: Playfair display;
     font-style: italic;
     font-weight: bold;
@@ -39,6 +39,6 @@
     margin: auto;
 }
 
-.no-tag {
+.notag {
     display: none;
 }
