tried doing a callback prop to get hamburger icon back when click, but that did not work for me. Next I tried with functional components, no dice, now I'm trying with react hooks and still can't get it working properly. Next I will try to see how to set a state in storybook

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -9,10 +9,10 @@
   cursor: pointer;
 }
 
-.hamburger-icon {
+.hamburgerBars {
   font-size: 30px;
 }
 
-/* .hamburger-Times {
+.hamburgerTimes {
   font-size: 30px;
-} */
+}
