--- a/client/src/components/FlagshipMenu/Flagship.css
+++ b/client/src/components/FlagshipMenu/Flagship.css
@@ -7,26 +7,20 @@
 	align-items: center;
 }
 .flagship-header {
-	display: flex;
+	display: grid;
+	grid-template-columns: 20% 60% 20%;
+	text-align: center;
 	align-items: center;
 	margin-top: 16px;
+	width: 100%;
 }
 .arrow-icon-link {
 	color: black;
-}
-.flagship-arrow-icon {
-
-}
-.flagship-city {
-
 }
 .flagship-image {
 	width: 100%;
 	height: 201px;
 	background-color: lightgray;
-}
-.flagship-section {
-	/*text-align: center;*/
 }
 .store-contact-info {
 	text-align: center;
@@ -37,6 +31,7 @@
 	margin: 30px 0;
 	display: grid;
 	grid-template-columns: 20px 160px;
+	grid-column-gap: 8px;
 	grid-template-areas:
 		"ic ti"
 		".  in";
