--- a/client/src/components/TextArea/TextArea.css
+++ b/client/src/components/TextArea/TextArea.css
@@ -6,11 +6,7 @@
   font-size: 25px;
 }
 
-.text-area-title {
-  font-size: 30px;
-}
-
-.title {
+.text-area-label {
   font-size: 35px;
   display: block;
   margin-bottom: 15px;
