--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -3,13 +3,11 @@
   font-weight: bold;
   line-height: 20px;
   font-family: Sahitya;
-  font-size: 15px;
+  font-size: 14px;
   border: 1px;
 }
 
 .button-large {
-  width: 155px;
-  height: 33px;
   font-size: 13px;
   line-height: 16px;
   color: black;
@@ -21,14 +19,12 @@
   color: #441f0e;
   font-weight: bold;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 31px;
-  width: 88px;
+  padding: 6px 11px;
 }
 
 .button-dark-pink {
   background-color: rgba(68, 31, 14, 0.2);
-  height: 28px;
-  width: 75px;
+  padding: 4px, 10px;
   font-family: Raleway;
 }
 
@@ -40,15 +36,16 @@
   color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-size: 14px;
+  padding: 8px 27px;
 }
 
 .button-grey {
   background-color: rgba(227, 224, 222);
+  padding: 3px 9px;
 }
 
 .button-white {
-  height: 37px;
-  width: 202px;
+  padding: 10px 25px;
   background-color: #ffffff;
   border: 1px solid #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
