--- a/client/src/components/FullLogo/Logo.css
+++ b/client/src/components/FullLogo/Logo.css
@@ -4,16 +4,17 @@
     margin: auto;
 }
 
-.modern {
+.logo-word-modern {
     font-family: Raleway, sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 44px;
     letter-spacing: 0.1px;
     color: #25282B;
+    margin: 0;
 }
 
-.trousseau {
+.logo-word-trousseau {
     font-family: Playfair display;
     font-style: italic;
     font-weight: bold;
@@ -23,7 +24,7 @@
     margin: 0 0 0 15px;
 }
 
-.tag-line {
+.tagline {
     font-family: Raleway, sans-serif;
     font-style: normal;
     font-weight: 300;
