--- a/client/src/components/BridalAppointment/BridalAppointment.css
+++ b/client/src/components/BridalAppointment/BridalAppointment.css
@@ -5,13 +5,59 @@
   padding: 1.5em 1em;
 }
 
-.defaultView {
+.default-view {
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 
-.infoView {
+h4 {
+  font-family: "Raleway", sans-serif;
+  font-weight: bolder;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0;
+  color: #000000;
+  padding: 0;
+  margin: 0 0 10px;
+}
+
+p.main-text {
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0;
+  color: #000000;
+  line-height: normal;
+  margin: 0;
+  padding: 0;
+}
+
+.dress-icon {
+  display: flex;
+}
+
+.dress-icon-hidden {
+  display: none;
+}
+
+@media only screen and (min-width: 735px) {
+  .appt-container {
+    background-color: #ffffff;
+    width: 30%;
+    margin: 0 auto;
+  }
+  .h4 {
+    font-family: "Playfair Display";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+  }
+}
+
+/* .infoView {
   justify-content: center;
   align-items: flex-start;
   text-align: left;
@@ -67,7 +113,7 @@ h4 {
   letter-spacing: 0;
   color: #000000;
   padding: 0;
-  margin: 0;
+  margin: 0 0 10px;
 }
 
 .main-text {
@@ -94,7 +140,11 @@ h4 {
 }
 
 .dress-icon {
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
 }
 
 .thankYou {
@@ -103,11 +153,18 @@ h4 {
   width: 80%;
 }
 
-.flex {
-  display: flex;
-  flex-flow: wrap;
-}
 .flex1 {
   display: flex;
   flex-flow: wrap;
 }
+
+.fullInfoView .icon-container {
+  display: flex;
+  flex-flow: column;
+}
+
+.fullInfoView ul.info-details {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+} */
