--- a/client/src/components/SingupCard/SignupCard.css
+++ b/client/src/components/SingupCard/SignupCard.css
@@ -1,26 +1,18 @@
-.signup {
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 16px;
-  border: 1px solid black;
-  height: 15vh;
-  width: 37vw;
-  display: flex;
+.container{
+    display: flex;
+    flex-direction: column;
 }
 
-.small-pink {
-  background-color: #fae5dc;
-  color: #441f0e;
-  font-weight: bold;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 31px;
-  width: 88px;
+
+.text {
+  font-family: Raleway;
   font-style: normal;
-  font-weight: bold;
-  line-height: 20px;
-  font-family: Sahitya;
-  font-size: 15px;
-  border: 1px;
+  font-weight: 100;
+  font-size: 14px;
+  line-height: 16px;
+  /* margin:0 0 10px 100px; */
+    display: flex;
+    
 }
+
+
