--- a/client/src/components/SelectDropdown/SelectDropdown.css
+++ b/client/src/components/SelectDropdown/SelectDropdown.css
@@ -1,6 +1,12 @@
 .selectDropdown {
-  font-size: 16px;
+  width: 184px;
+  height: 40px;
+  font-size: 14px;
   font-family: "Raleway", sans-serif;
   background-color: rgb(228, 224, 222);
-  border-radius: none;
+  border: 0.1 solid #000000;
+}
+
+.selectDropdown::selection {
+  font-weight: bold;
 }
