--- a/client/src/components/BrideInfo/BrideInfo.css
+++ b/client/src/components/BrideInfo/BrideInfo.css
@@ -1,30 +1,16 @@
-.button {
-  color: white;
-  border-radius: 2px;
-  padding: 5px 25px;
+@font-face {
+  font-family: Raleway;
+  src: url("https://fonts.googleapis.com/css?family=Raleway&display=swap");
 }
 
-.button-large {
-  padding: 10px 50px;
+.menu-label {
+  display: block;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 21px;
+  margin: 10px;
+  text-align: justify;
 }
 
-.button-primary {
-  background-color: #0069d9;
-  border: #0069d9;
-}
-
-.button-success {
-  background-color: green;
-  border: green;
-}
-
-.button-danger {
-  background-color: red;
-  border: red;
-}
-
-.button-warning {
-  background-color: yellow;
-  border: yellow;
-  color: black;
-}
