--- a/client/src/components/DatePicker/DatePicker.css
+++ b/client/src/components/DatePicker/DatePicker.css
@@ -10,16 +10,14 @@
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
+  margin: 10px;
 }
 
 .requested-date-input {
-  box-shadow: 5px 10px;
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: normal;
+  display: block;
+  font: Raleway;
+  background-color: rgb(228, 224, 222);
+  padding: 5px 0px;
+  outline-color: rgb(249, 228, 221);
   font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  margin: 0.4rem 0;
-  background: rgba(68, 31, 14, 0.2);
 }
