--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -7,11 +7,11 @@
     padding: 0px 10px;
 }
 
-.desktop {
+.desktop-style {
     padding: 0px 10px;
 }
 
-.mobile {
+.mobile-style {
     display: none;
 }
 
@@ -20,10 +20,10 @@
       width: 100%; 
       justify-content: space-between;
     }
-    .desktop {
+    .desktop-style {
         display: none;
     }
-    .mobile {
+    .mobile-style {
         display: block;
     }
   }
