--- a/client/src/components/BridalAppointment/BridalAppointment.css
+++ b/client/src/components/BridalAppointment/BridalAppointment.css
@@ -55,9 +55,14 @@ p.main-text {
 
 .width-max {
   max-width: 70%;
+  display: none;
 }
 
-@media only screen and (min-width: 735px) {
+.dress-icon { 
+  display: none;
+}
+
+@media only screen and (min-width: 500px) {
   .appt-container {
     width: 50%;
     margin: 0 auto;
@@ -101,117 +106,11 @@ p.main-text {
 
   .dress-icon {
     margin: 2em auto;
+    display: block;
+  }
+
+  .width-max {
+    display: block;
   }
 }
 
-/* .infoView {
-  justify-content: center;
-  align-items: flex-start;
-  text-align: left;
-}
-
-.infoView h4 {
-  margin: 0 0 10px;
-}
-
-.infoView .icon-container {
-  display: block;
-}
-
-.infoView .info-details {
-  list-style: none;
-  padding-inline-start: 25px;
-  margin: 0;
-}
-
-.infoView .info-details li {
-  padding: 8px 0 0 0;
-  display: flex;
-  flex-flow: wrap;
-}
-
-.infoView .info-details .icon-text {
-  text-indent: 15px;
-  font-family: "Raleway", sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  font-style: normal;
-  letter-spacing: 0;
-  color: #000000;
-  line-height: 19px;
-}
-
-.appt-confirmed-mobile {
-  text-align: left;
-  background-color: #fae5dc;
-  display: flex;
-  flex-flow: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 1.5em 1em;
-}
-
-h4 {
-  font-family: "Raleway", sans-serif;
-  font-weight: bolder;
-  font-style: normal;
-  font-size: 20px;
-  line-height: 23px;
-  letter-spacing: 0;
-  color: #000000;
-  padding: 0;
-  margin: 0 0 10px;
-}
-
-.main-text {
-  font-family: "Raleway", sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  letter-spacing: 0;
-  color: #000000;
-  line-height: normal;
-}
-
-.times-close {
-  display: flex;
-  flex-flow: row;
-  justify-content: flex-end;
-  padding: 0 15px 0 0;
-}
-
-.thankyou-info-container {
-  display: flex;
-  flex-flow: wrap;
-  justify-content: center;
-}
-
-.dress-icon {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  align-content: flex-start;
-}
-
-.thankYou {
-  display: flex;
-  flex-flow: wrap;
-  width: 80%;
-}
-
-.flex1 {
-  display: flex;
-  flex-flow: wrap;
-}
-
-.fullInfoView .icon-container {
-  display: flex;
-  flex-flow: column;
-}
-
-.fullInfoView ul.info-details {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-} */
