--- a/client/src/components/SingupCard/SignupCard.css
+++ b/client/src/components/SingupCard/SignupCard.css
@@ -1,32 +1,24 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  outline: solid orange 1px;
   height: 20vh;
   width: 40vw;
 }
 
 .text {
-  outline: solid green 1px;
-  font-family: Raleway;
-  font-style: normal;
-  font-weight: 100;
-  font-size: 14px;
-  line-height: 16px;
-  /* margin:0 0 10px 100px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
-  /* padding: 10px 0 10px 100px; */
-  padding-bottom: 10px;
-
+  padding: 10px 0 10px 85px;
 }
 
 .signup {
   display: flex;
-  /* flex-direction: row; */
-  /* justify-content: space-between; */
   justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 375px) {
+  .text {
+    font-size: 20px;
+  }
 }
