making it responsive

--- a/client/src/components/SingupCard/SignupCard.css
+++ b/client/src/components/SingupCard/SignupCard.css
@@ -18,7 +18,21 @@
 }
 
 @media only screen and (max-width: 375px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+    width: 40vw;
+  }
   .text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0 10px 85px;
     font-size: 20px;
+  }
+  .signup {
+    display: flex;
+    justify-content: space-evenly;
   }
 }
