refactored my code and put all of my react hooks function and logic inside my component file. Can not get logi to pass down keeps coming up undefined. deleted commentedout code

--- a/client/src/components/Hamburger/Hamburger.css
+++ b/client/src/components/Hamburger/Hamburger.css
@@ -9,10 +9,7 @@
   cursor: pointer;
 }
 
-.hamburgerBars {
+.hamburgerIcon {
   font-size: 30px;
-}
-
-.hamburgerTimes {
-  font-size: 30px;
+  transition: 0.2s;
 }
