--- a/client/src/components/BridalAppointment/BridalAppointment.css
+++ b/client/src/components/BridalAppointment/BridalAppointment.css
@@ -25,10 +25,15 @@ h4 {
   font-weight: bolder;
   font-style: normal;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 100%;
   letter-spacing: 0;
   color: #000000;
   padding: 0;
+}
+
+h4.mobile-default-info {
+  margin: 0 auto;
+  padding-bottom: 15px;
 }
 
 p.main-text {
@@ -62,7 +67,7 @@ p.main-text {
   display: none;
 }
 
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 768px) {
   .appt-container {
     width: 50%;
     margin: 0 auto;
