--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -1,32 +1,30 @@
-.slider-slide {
+.slide {
   height: 280px;
-  width: 280px;
+  width: 260px;
   margin-right: 30px;
 }
 
-.slider-title {
-  width: 340px;
+.title {
+  width: 290px;
   background-color: rgb(246, 230, 222);
   text-align: left;
-  margin: 0;
   font-weight: bold;
 }
 
-.slider-card {
+.card {
   display: flex;
 }
 
-.slider-slide-container {
+.slide-container {
   display: flex;
   flex-direction: row;
   height: 260px;
-  width: 320px;
+  width: 300px;
   background-color: rgb(246, 230, 222);
-  border-left: 20px solid rgb(246, 230, 222);
   margin-right: 0;
 }
 
-.slider-button {
+.button {
   background-color: rgb(246, 230, 222);
   border: 0;
   margin: 0;
@@ -34,14 +32,14 @@
   height: 278px;
 }
 
-.slider-pic {
+.slide-img {
   height: 210px;
   width: 125px;
   margin: 10px;
   margin-bottom: 0;
 }
 
-.slider-text {
+.slide-text {
   text-align: center;
   margin: 0;
   font-weight: bold;
